# AUTOFORECAST

./: .gitignore  Dockerfile  README.md  app.py  project_structure.py  pyproject.toml  requirements.txt
.github/workflows/: main_autoforecast.yml
.zen/: config.yaml
config/: config.yaml
src/AUTOFORECAST/: __init__.py
src/AUTOFORECAST/components/: data_analysis.py  forecasting.py  model_evaluation.py  preprocessing_and_training.py
src/AUTOFORECAST/config/: configuration.py
src/AUTOFORECAST/constants/: __init__.py
src/AUTOFORECAST/entity/: config_entity.py
src/AUTOFORECAST/pipeline/: pipeline.py  prediction.py  stage_01_data_analysis.py  stage_01_data_transformation.py  stage_01_preprocessing_and_training.py  stage_02_model_evaluation.py  stage_02_model_training.py  stage_02_preprocessing_and_training.py  stage_03_forecasting.py  stage_03_model_evaluation.py  stage_04_forecasting.py
src/AUTOFORECAST/utils/: common.py
